--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "test": "react-script test",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
@@ -14,6 +15,8 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^13.5.0",
     "expo": "~49.0.12",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
@@ -25,7 +28,10 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-native": "^12.3.0"
   },
   "private": true
 }
