--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/detox": "^6.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/datetimepicker": "^7.6.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@stripe/stripe-react-native": "^0.33.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "expo": "~49.0.12",
@@ -28,13 +30,16 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "stripe": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/react-native": "^12.3.0"
+    "@testing-library/react-native": "^12.3.0",
+    "detox": "^20.13.0",
+    "jest": "^29.7.0"
   },
   "private": true
 }
