--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "@stripe/stripe-react-native": "^0.33.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "expo": "~49.0.12",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
     "firebase": "^10.4.0",
     "history": "^5.3.0",
     "react": "18.2.0",
@@ -30,6 +33,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-web": "~0.19.6",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "stripe": "^13.9.0"
   },
@@ -41,5 +46,9 @@
     "detox": "^20.13.0",
     "jest": "^29.7.0"
   },
-  "private": true
+  "private": true,
+  "description": "## Description",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
