--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "^7.6.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@stripe/stripe-react-native": "^0.33.0",
@@ -38,6 +39,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-native": "^12.3.0",
+    "cypress": "^13.3.0",
     "detox": "^20.13.0",
     "jest": "^29.7.0"
   },
