--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.16.0",
     "stripe": "^13.9.0"
