--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.72.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
